feat: 추천 포스트 리스트 로직 수정
- 중복 URL 제거